# Makefile.am for platform code for BEEBS benchmarks
#
# Copyright (C) 2013 Embecosm Limited and University of Bristol
#
# This file is part of the Bristol/Embecosm Embedded Benchmark Suite.
#
# Contributor: Jeremy Bennett <jeremy.bennett@embecosm.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

# Only needed to ensure all the sources are included in the distribution.
EXTRA_DIST = platformcode.c \
             platformcode.h \
             startup.c \
             sam4lxplained.ld \
             pic32mx.ld \
             pic32mx_startup.s \
             stm32f05_flash.ld \
             stm32vl_flash.ld
